Remove Payment and Grace date
