# src/main/java/com/financeos/api/account/dto/UpdateAccountRequest.java
@@ -53,8 +53,6 @@ public sealed interface UpdateAccountRequest {
             String description,
             @NotBlank(message = "Last 4 digits are required") String last4,
             @NotNull(message = "Credit limit is required") BigDecimal creditLimit,
-            @NotNull(message = "Payment due day is required") Integer paymentDueDay,
-            @NotNull(message = "Grace period days is required") Integer gracePeriodDays,
             String statementPassword,
             LocalDate ingestFromDate
     ) implements UpdateAccountRequest {
